# FintechMarketThesisGenerator

./: .env.example  .gitignore  .gitmodules  .semgrep.yml  LICENSE  Makefile  README.md  app.py  finthesis_gemini_faiss.py  main.js  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  styles.css
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  daily-ingest.yml  semgrep.yml
api/: auth.py  deps.py  job_manager.py  main.py  routes.py  schemas.py  security.py  serializers.py  supabase_job_manager.py  thesis_pipeline.py
config/: settings.py
core/: exceptions.py  fetch_articles.py  gemini_client.py  ingestion.py  retrieval.py  utils.py
core/agents/: __init__.py  execution_tracker.py  hallucination_detector.py  refinement_graph.py  thesis_tools.py  tool_registry.py
core/implementations/: __init__.py  keyword_scoring_strategy.py
core/implementations/article_sources/: __init__.py  rss_source.py
core/implementations/classifiers/: base_chat_classifier.py  huggingface_classifier.py  ollama_classifier.py
core/implementations/embeddings/: __init__.py  fastembed_embeddings.py  huggingface_embeddings.py
core/implementations/llm/: __init__.py  ai_gateway.py  cache_manager.py  cost_tracker.py  gemini_llm.py  llm_wrapper.py  local_summarizer.py  routing_strategy.py  supabase_cache_manager.py  usage_tracker.py
core/implementations/repositories/: supabase_article_content_repository.py  supabase_article_repository.py  supabase_quarantine_repository.py  supabase_silver_repository.py  supabase_trend_repository.py  supabase_untagged_repository.py
core/implementations/scrapers/: __init__.py  beautifulsoup_scraper.py
core/implementations/vectorstores/: __init__.py  faiss_store.py  supabase_vector_store.py
core/interfaces/: __init__.py  article_content_repository.py  article_repository.py  article_source.py  cache.py  embeddings.py  job_manager.py  llm.py  quarantine_repository.py  relevance_classifier.py  scoring_strategy.py  scraper.py  silver_repository.py  thesis_structurer.py  trend_repository.py  untagged_repository.py  vectorstore.py
core/models/: article.py  cache_entry.py  cost_metric.py  quarantine_record.py  raw_article.py  silver_record.py  thesis.py  trend_metric.py
core/services/: __init__.py  approval_service.py  category_mappings.py  episodic_recall.py  gold_service.py  ingestion_service.py  opportunity_scoring_service.py  retrieval_service.py  silver_service.py  thesis_generator_service.py  thesis_structuring_service.py
core/utils/: data_quality.py  date_intent.py  logging.py  observability.py  text_utils.py
data/: sample_articles.json
dependency_injection/: container.py
docs/: ARCHITECTURE.md  index.md  limits.md  quickstart.md
docs/concepts/: pipeline.md  refusals.md
docs/guides/: admin.md  auth.md  exporting.md  library-and-recall.md  refining-a-thesis.md
docs/reference/: api.md
evals/: __init__.py  classifier_eval.py  refinement_eval.py  thesis_narrative_eval.py
evals/data/: classifier_real.example.csv  classifier_synthetic.json
frontend/: build.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  app.ts  auth.ts  config.ts  dom.ts  export.ts  format.ts  main.ts  main.tsx  render.ts  styles.css  types.ts  vite-env.d.ts
scripts/: build_gold.py  build_silver.py  dump_openapi.py  ingest_bronze.py  inspect_corpus.py
sql/: article_content.sql  articles_raw.sql  articles_silver.sql  corpus_probe.sql  documents.sql  jobs.sql  llm_cache.sql  quarantine.sql  trend_metrics.sql  untagged_articles.sql
tests/: conftest.py  test_execution_tracker.py  test_hallucination_detector.py
tests/integration/: test_container.py
tests/unit/: test_ai_gateway.py  test_api.py  test_approval_service.py  test_article_content_repository.py  test_article_repository.py  test_client_pool.py  test_config.py  test_container.py  test_date_intent.py  test_episodic_recall.py  test_gold_service.py  test_huggingface_classifier.py  test_keyword_scoring.py  test_llm_wrapper.py  test_local_summarizer.py  test_models.py  test_ollama_classifier.py  test_opportunity_scoring.py  test_quarantine_repository.py  test_refinement_graph.py  test_rss_source.py  test_security.py  test_semantic_scoring.py  test_services.py  test_silver_repository.py  test_silver_service.py  test_supabase_cache_manager.py  test_text_utils.py  test_thesis_structuring.py  test_trend_repository.py  test_untagged_repository.py
(+18 files in other folders)
