[project]
name = "finthesis"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    # Streamlit
    "streamlit>=1.28.1",
    # LangChain & AI
    "langchain>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-google-genai>=2.1.12",
    "langgraph==1.0.1",
    # Observability
    "langfuse>=4,<5",
    # Vector Store
    "faiss-cpu==1.12.0",
    # Embeddings
    "fastembed>=0.4.0",
    # Web Scraping
    "beautifulsoup4==4.12.3",
    "requests==2.34.2",
    "feedparser==6.0.12",
    # API
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "sse-starlette==3.3.3",
    "supabase==2.30.0",
    # Utilities
    "python-dotenv==1.0.0",
    # Data
    "pandas==2.3.3",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "mypy==1.7.1",
    "types-requests==2.32.4.20260107",
    "types-beautifulsoup4==4.12.0.20250516",
    "ruff==0.1.7",
    "black==23.12.1",
    "pre-commit==3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "config", "dependency_injection"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.black]
line-length = 88
target-version = ["py314"]
