[project]
name = "finthesis"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    # LangChain & AI
    "langchain>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-google-genai>=2.1.12",
    "langgraph==1.0.1",
    # Observability
    "langfuse>=4,<5",
    # Embeddings
    "fastembed>=0.4.0",
    "huggingface_hub==1.15.0",
    # Web Scraping
    "beautifulsoup4==4.12.3",
    "requests==2.34.2",
    "feedparser==6.0.12",
    # API
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "supabase==2.30.0",
    # Utilities
    "python-dotenv==1.0.0",
    "dateparser==1.4.1",
    "spacy==3.8.13",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    # Data
    "pandas==2.3.3",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "mypy==1.7.1",
    "types-requests==2.32.4.20260107",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-dateparser==1.4.1.20260617",
    "ruff==0.15.17",
    "pre-commit==3.6.0",
]
docs = [
    "mkdocs-material==9.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "config", "dependency_injection"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["finthesis_internal"]
